5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1595_1446.log
== TEST (2019-03-21 16:42:54) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
partemichael=int(totals/3)
print(partemichael)

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:43:16) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
partemichael=int(totals/3)
print(round(partemichael, 3))

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:43:25) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
partemichael=int(totals//3)
print(round(partemichael, 3))

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:43:44) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
partemichael=int(totals/3)
print(round(partemichael, 3))

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:43:44) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
partemichael=int(totals/3)
print(round(partemichael, 3))

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:43:58) 
-- CODE:
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
partemichael=int(totals/3)
print(round(partemichael, 3))

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:45:05) 
-- CODE:
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
partemichael=int(totals/3)
print(round(int, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(int, 3))
TypeError: type type doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:45:19) 
-- CODE:
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
int(totals/3)
print(round(int, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(int, 3))
TypeError: type type doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:45:27) 
-- CODE:
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
int=(totals/3)
print(round(int, 3))

-- OUTPUT:
3.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:45:30) 
-- CODE:
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
int=(totals/3)
print(round(int, 3))

-- EXECUTION TIME:
0.158793
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
3.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
3.333
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
3.333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:45:34) 
-- CODE:
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
int=(totals/3)
print(round(int, 3))

-- OUTPUT:
3.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:45:42) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
int=(totals/3)
print(round(int, 3))

-- OUTPUT:
3.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:45:46) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
int=(totals/3)
print(round(int, 3))

-- EXECUTION TIME:
0.13104
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
3.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
3.333
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
3.333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:46:58) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
partemichael=int(1/3*(totals))
print(round(partemichael, 3))

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:47:14) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
partemichael=int(1/3*(totals))
print(round(int)(partemichael, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(int)(partemichael, 3))
TypeError: type type doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:47:28) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
partemichael=int(1/3*(totals))
print(round(int(partemichael, 3))

-- ERROR:
File "XXXX", line 8
    
                                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:47:38) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
partemichael=int(1/3*(totals))
print(round(int(partemichael, 3)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(int(partemichael, 3)))
TypeError: int() can't convert non-string with explicit base
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:48:02) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
partemichael=int(1/3*(totals))
print(partemichael)

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:48:19) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
partemichael=int(1/3*(totals))
print(round(partemichael, 3)

-- ERROR:
File "XXXX", line 8
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:48:30) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
partemichael=int(1/3*(totals))
print(round(partemichael,3))

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:49:33) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
y=float(input("parte michael: "))
partemichael=int(1/3*(totals))
print(round(partemichael,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    y=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:50:12) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
y=float(input("parte michael: "))
int=(1/3*(totals))
print(round(int,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    y=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:50:45) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
int=(1/3*(totals))
print(round(int,3))

-- OUTPUT:
3.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:50:50) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
int=(1/3*(totals))
print(round(int,3))

-- EXECUTION TIME:
0.173449
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
3.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
3.333
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
3.333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:51:32) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)

partemichael=(int(1/3*(totals))
print(round(int,3))

-- ERROR:
File "XXXX", line 8
    print(round(int,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:52:58) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)

partemichael=(int(1/3*(totals))
print=(round(int,3))

-- ERROR:
File "XXXX", line 8
    print=(round(int,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:53:15) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
partemichael=(int(1/3*(totals))
print=(round(partemichael,3))

-- ERROR:
File "XXXX", line 7
    print=(round(partemichael,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:54:45) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
partemichael=(int(1/3*(totals))
print=(round(partemichael, 3))

-- ERROR:
File "XXXX", line 7
    print=(round(partemichael, 3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:55:01) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
partemichael=(int(1/3*(totals))
print=(round(int(partemichael, 3)))

-- ERROR:
File "XXXX", line 7
    print=(round(int(partemichael, 3)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:55:02) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
partemichael=(int(1/3*(totals))
print=(round(int(partemichael, 3)))

-- ERROR:
File "XXXX", line 7
    print=(round(int(partemichael, 3)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:55:12) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
partemichael=(int(1/3*(totals))
print(round(int(partemichael, 3)))

-- ERROR:
File "XXXX", line 7
    print(round(int(partemichael, 3)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:55:17) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
partemichael=(int(1/3*(totals))
print(round(partemichael, 3)))

-- ERROR:
File "XXXX", line 7
    print(round(partemichael, 3)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:55:33) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
partemichael=(int(1/3*(totals))
print(round(partemichael, 3))

-- ERROR:
File "XXXX", line 7
    print(round(partemichael, 3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:55:56) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)

partemichael=(int(1/3*(totals))
print=(round(int,3))

-- ERROR:
File "XXXX", line 8
    print=(round(int,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:56:00) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)

partemichael=(int(1/3*(totals))
print(round(int,3))

-- ERROR:
File "XXXX", line 8
    print(round(int,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:56:04) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)

int=(1/3*(totals))
print(round(int,3))

-- OUTPUT:
3.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:56:17) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
int=(1/3*(totals))
print(round(int,3))

-- EXECUTION TIME:
0.16169
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
3.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
3.333
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
3.333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:56:44) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
partemichael=int(1/3*(totals))
print(round(int,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(int,3))
TypeError: type type doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:57:04) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
partemichael=int(1/3*(totals))
print(round(partemichael,3))

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:57:12) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=5.00
smaracuja=2.00
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
partemichael=int(1/3*(totals))
print(round(partemichael, 3))

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:57:52) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=4.50
smaracuja=2.50
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
partemichael=int(1/3*(totals))
print(round(partemichael, 3))

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:02:24) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=4.50
smaracuja=2.50
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
partemichael=int
int(1/3*(totals))
print(round(partemichael, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(partemichael, 3))
TypeError: type type doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:02:36) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=4.50
smaracuja=2.50
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
partemichael=int
int(1/3*(totals))
print(round(INT, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(INT, 3))
NameError: name 'INT' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:02:42) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=4.50
smaracuja=2.50
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
partemichael=int
int(1/3*(totals))
print(round(int, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(int, 3))
TypeError: type type doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:03:21) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=4.50
smaracuja=2.50
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
partemichael=int(1/3*(totals))
print(round(int, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(int, 3))
TypeError: type type doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:03:37) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=4.50
smaracuja=2.50
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
x=int(1/3*(totals))
print(round(x, 3))

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:04:12) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=4.50
smaracuja=2.50
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
y=int(1/3*(totals))
print(round(x, 3))

-- OUTPUT:
7.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:04:15) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=4.50
smaracuja=2.50
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
y=int(1/3*(totals))
print(round(y, 3))

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:04:28) 
-- CODE:
x=float(input("quantidade de litros comprado: "))
slaranja=4.50
smaracuja=2.50
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
y=int(1/3*(totals))
print(round(y, 3))

-- EXECUTION TIME:
0.127483
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
3
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
3
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:05:34) 
-- CODE:
x=float(input("quantidade de litros comprados: "))
slaranja=4.50
smaracuja=2.50
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
y=int(1/3*(totals))
print(round(int, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(int, 3))
TypeError: type type doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:05:42) 
-- CODE:
x=float(input("quantidade de litros comprados: "))
slaranja=4.50
smaracuja=2.50
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
int(1/3*(totals))
print(round(int, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(int, 3))
TypeError: type type doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:05:54) 
-- CODE:
x=float(input("quantidade de litros comprados: "))
slaranja=4.50
smaracuja=2.50
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
int=(1/3*(totals))
print(round(int, 3))

-- OUTPUT:
3.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:05:58) 
-- CODE:
x=float(input("quantidade de litros comprados: "))
slaranja=4.50
smaracuja=2.50
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
int=(1/3*(totals))
print(round(int, 3))

-- EXECUTION TIME:
0.150303
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
3.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
3.333
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
3.333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:30:35) 
-- CODE:
x=float(input("quantidade de litros comprados: "))
slaranja=4.50
smaracuja=2.50
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
int=(1/3*(totals))
print(round(int, 3))

-- OUTPUT:
3.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:30:41) 
-- CODE:
x=float(input("quantidade de litros comprados: "))
slaranja=4.50
smaracuja=2.50
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
int=(1/3*(totals))
print(round(int, 3))

-- EXECUTION TIME:
0.216324
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
3.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
3.333
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
3.333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:31:16) 
-- CODE:
x=float(input("quantidade de litros comprados: "))
slaranja=4.50
smaracuja=2.50
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
ficaracommichael=int
int=(1/3*(totals))
print(round(int, 3))

-- OUTPUT:
3.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:31:21) 
-- CODE:
x=float(input("quantidade de litros comprados: "))
slaranja=4.50
smaracuja=2.50
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
ficaracommichael=int
int=(1/3*(totals))
print(round(int, 3))

-- EXECUTION TIME:
0.169821
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
3.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
3.333
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
3.333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:31:40) 
-- CODE:
x=float(input("quantidade de litros comprados: "))
slaranja=4.50
smaracuja=2.50
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
ficaracommichael=int
int=(1/3*(totals))
print(round(ficaracommichael, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(ficaracommichael, 3))
TypeError: type type doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:32:01) 
-- CODE:
x=float(input("quantidade de litros comprados: "))
slaranja=4.50
smaracuja=2.50
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
ficaracommichael=int
int=(1/3*(totals))
print(round(int, 3))

-- OUTPUT:
3.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:32:08) 
-- CODE:
x=float(input("quantidade de litros comprados: "))
slaranja=4.50
smaracuja=2.50
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
ficaracommichael=int
int=(1/3*(totals))
print(round(int, 3))

-- EXECUTION TIME:
0.199138
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
3.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
3.333
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
3.333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:33:28) 
-- CODE:
x=float(input("quantidade de litros comprados: "))
slaranja=4.50
smaracuja=2.50
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
int=(1/3*(totals))
y=float(int("ficará com Michael"))
print(round(int, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    y=float(int("ficará com Michael"))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:33:42) 
-- CODE:
x=float(input("quantidade de litros comprados: "))
slaranja=4.50
smaracuja=2.50
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
int=(1/3*(totals))
y=float(input("ficará com Michael"))
print(round(int, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    y=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:34:06) 
-- CODE:
x=float(input("quantidade de litros comprados: "))
slaranja=4.50
smaracuja=2.50
smorango=3.00
totals=int(slaranja+smaracuja+smorango)
int=(1/3*(totals))
print(round(int, 3))

-- OUTPUT:
3.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:55:51) 
-- CODE:
x=float(input("quantidade de litros comprados: "))
slaranja=4.50
smaracuja=2.50
smorango=3.00
totals=1/3*(slaranja+smaracuja+smorango)
print(round(totals, 3))

-- OUTPUT:
3.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:56:02) 
-- CODE:
x=float(input("quantidade de litros comprados: "))
slaranja=4.50
smaracuja=2.50
smorango=3.00
totals=1/3*(slaranja+smaracuja+smorango)
print(round(totals, 3))

-- EXECUTION TIME:
0.135392
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
3.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
3.333
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
3.333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:56:14) 
-- CODE:
x=float(input("quantidade de litros comprados: "))
slaranja=4.50
smaracuja=2.50
smorango=3.00
totals=1/3*(slaranja+smaracuja+smorango)
print(round(totals, 3))

-- OUTPUT:
3.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:56:16) 
-- CODE:
x=float(input("quantidade de litros comprados: "))
slaranja=4.50
smaracuja=2.50
smorango=3.00
totals=1/3*(slaranja+smaracuja+smorango)
print(round(totals, 3))

-- EXECUTION TIME:
0.132619
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
3.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
3.333
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
3.333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:56:17) 
-- CODE:
x=float(input("quantidade de litros comprados: "))
slaranja=4.50
smaracuja=2.50
smorango=3.00
totals=1/3*(slaranja+smaracuja+smorango)
print(round(totals, 3))

-- OUTPUT:
3.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:56:33) 
-- CODE:
x=float(input("quantidade de litros comprados: "))
slaranja=4.50
smaracuja=2.50
smorango=3.00
totals=1/3*(slaranja+smaracuja+smorango)
print(round(totals, 3))

-- EXECUTION TIME:
0.196896
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
3.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
3.333
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
3.333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:56:47) 
-- CODE:
x=float(input("quantidade de litros comprados: "))
slaranja=4.5
smaracuja=2.5
smorango=3
totals=1/3*(slaranja+smaracuja+smorango)
print(round(totals, 3))

-- OUTPUT:
3.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:56:52) 
-- CODE:
x=float(input("quantidade de litros comprados: "))
slaranja=4.5
smaracuja=2.5
smorango=3
totals=1/3*(slaranja+smaracuja+smorango)
print(round(totals, 3))

-- EXECUTION TIME:
0.152009
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
3.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
3.333
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
3.333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:57:35) 
-- CODE:
x=float(input("quantidade de litros comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=1/3*(slaranja+smaracuja+smorango)
print(round(totals, 3))

-- OUTPUT:
3.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:57:38) 
-- CODE:
x=float(input("quantidade de litros comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=1/3*(slaranja+smaracuja+smorango)
print(round(totals, 3))

-- EXECUTION TIME:
0.142605
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
3.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
3.333
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
3.333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:57:51) 
-- CODE:
x=float(input("quantidade de litros comprados: "))
totals=1/3*(slaranja+smaracuja+smorango)
print(round(totals, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    totals=1/3*(slaranja+smaracuja+smorango)
NameError: name 'slaranja' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:58:38) 
-- CODE:
x=float(input("quantidade de litros comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=int(slaranja+smaracuja+smorango)*1/3
print(round(totals, 3))

-- OUTPUT:
3.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:58:41) 
-- CODE:
x=float(input("quantidade de litros comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=int(slaranja+smaracuja+smorango)*1/3
print(round(totals, 3))

-- EXECUTION TIME:
0.12845
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
3.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
3.333
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
3.333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:00:08) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=(slaranja+smaracuja+smorango)*1/3
y=float(input("ficará com Michael"))
print(round(totals, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    y=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:01:05) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=(slaranja+smaracuja+smorango)*1/3
print(round(totals, 3))float(input("ficara com Michael"))

-- ERROR:
File "XXXX", line 6
    print(round(totals, 3))float(input())
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:01:18) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=(slaranja+smaracuja+smorango)*1/3
print(round(totals, 3))
y=float(input("ficara com Michael"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    y=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:01:23) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=(slaranja+smaracuja+smorango)*1/3
print(round(totals, 3))
y=float(input("ficara com Michael"))
-- EXECUTION TIME:
0.136039
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1446/main.py", line 7, in <module>
    y=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:01:26) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=(slaranja+smaracuja+smorango)*1/3
print(round(totals, 3))
y=float(input("ficara com Michael"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    y=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:02:01) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=(slaranja+smaracuja+smorango)*1/3
print(round(totals, 3))
y=float(input("ficará com Michael"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    y=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:02:12) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=(slaranja+smaracuja+smorango)*1/3
print(round(totals, 3))
y=float(input("ficara com Michael"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    y=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:02:20) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=(slaranja+smaracuja+smorango)*1/3
print(round(totals, 3))
y=float(input("ficara com Michael"))
-- EXECUTION TIME:
0.226995
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1446/main.py", line 7, in <module>
    y=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:05:38) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=(slaranja+smaracuja+smorango)*1/3
print(round(totals, 3))

-- OUTPUT:
3.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:05:43) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=(slaranja+smaracuja+smorango)*1/3
print(round(totals, 3))

-- EXECUTION TIME:
0.218462
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
3.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
3.333
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
3.333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:07:37) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=(slaranja+smaracuja+smorango)*1/3
print(round(totals, 3))

-- OUTPUT:
3.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:07:54) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=(slaranja+smaracuja+smorango)*1/30
print(round(totals, 3))

-- EXECUTION TIME:
0.169578
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
0.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
0.333
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
0.333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:07:56) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=(slaranja+smaracuja+smorango)*1/30
print(round(totals, 3))

-- OUTPUT:
0.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:08:19) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=(slaranja+smaracuja+smorango)*1/30
print(round(totals, 3))

-- OUTPUT:
0.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:08:27) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=(slaranja+smaracuja+smorango)*1/3
print(round(totals, 3))

-- OUTPUT:
3.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:08:35) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=(slaranja+smaracuja+smorango)*1/3
print(round(totals, 3))

-- EXECUTION TIME:
0.122474
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
3.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
3.333
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
3.333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:08:38) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=(slaranja+smaracuja+smorango)*1/3
print(round(totals, 3))

-- OUTPUT:
3.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:08:42) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=(slaranja+smaracuja+smorango)*1/3
print(round(totals, 3))

-- EXECUTION TIME:
0.229307
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
3.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
3.333
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
3.333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:17:55) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=(slaranja+smaracuja+smorango)*1/3
print(totals)

-- OUTPUT:
3.3333333333333335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:18:08) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=(slaranja+smaracuja+smorango)*1//3
print(totals)

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:18:15) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=(slaranja+smaracuja+smorango)*1//3
print(totals)

-- EXECUTION TIME:
0.213051
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
3
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
3
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:18:32) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=(slaranja+smaracuja+smorango)*1//3
print(round(totals, 3)

-- ERROR:
File "XXXX", line 7
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:18:43) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=(slaranja+smaracuja+smorango)*1//3
print(round(totals, 3))

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:18:46) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=(slaranja+smaracuja+smorango)*1//3
print(round(totals, 3))

-- EXECUTION TIME:
0.221754
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
3
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
3
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:18:49) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=(slaranja+smaracuja+smorango)*1/3
print(round(totals, 3))

-- OUTPUT:
3.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:18:52) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
totals=(slaranja+smaracuja+smorango)*1/3
print(round(totals, 3))

-- EXECUTION TIME:
0.17728
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
3.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
3.333
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
3.333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:21:16) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
partemichael=(slaranja+smaracuja+smorango)*1/3
print(round(partemichael, 3))

-- OUTPUT:
3.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:21:20) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
partemichael=(slaranja+smaracuja+smorango)*1/3
print(round(partemichael, 3))

-- EXECUTION TIME:
0.113294
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
3.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
3.333
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
3.333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:22:07) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
y=float(input("ficara com Michael:"))
partemichael=(slaranja+smaracuja+smorango)*1/3
print(round(partemichael, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    y=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:22:24) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
y=float(input("ficara com Michael:"))
partemichael=(slaranja+smaracuja+smorango)*1/3
print(round(partemichael, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    y=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:02) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
y=float(input("ficara com Michael:"))
partemichael=(slaranja+smaracuja+smorango)*1/3
print(round(partemichael, 3))

-- EXECUTION TIME:
0.142093
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1446/main.py", line 5, in <module>
    y=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:23:17) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
partemichael=(slaranja+smaracuja+smorango)*1/3
print(round(partemichael, 3))

-- OUTPUT:
3.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:21) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
slaranja=4
smaracuja=3
smorango=3
partemichael=(slaranja+smaracuja+smorango)*1/3
print(round(partemichael, 3))

-- EXECUTION TIME:
0.172297
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
3.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
3.333
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
3.333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:24:50) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
partemichael=(x)*1/3
print(round(partemichael, 3))

-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:24:54) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
partemichael=(x)*1/3
print(round(partemichael, 3))

-- EXECUTION TIME:
0.221337
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
